<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.imago.imago.TaskFragment">

    <!--TODO установить нужный padding-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center_horizontal"
        android:text="@string/your_task"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:text="@string/for_3_days"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/task_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:fontFamily="@font/architects_daughter"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        tools:text="Fuck your mom" />


    <ImageView
        android:id="@+id/my_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/containerTextRating"
        android:layout_below="@id/task_text_view"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/make_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/make_ur_damn_photo"
        android:textSize="14sp"
        android:theme="@style/AppTheme.Button" />

    <LinearLayout
        android:id="@+id/containerTextRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:gravity="center_horizontal"
            android:text="@string/your_damn_rating"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_favourite_red" />

            <TextView
                android:id="@+id/like_count_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/architects_daughter"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                tools:text="10kk" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
